[gd_scene load_steps=4 format=3 uid="uid://4picy4dcquoj"]

[ext_resource type="Script" uid="uid://3nk5kr4i5njo" path="res://src/scenes/title/title.tscn.gd" id="1_ygvpb"]

[sub_resource type="Gradient" id="Gradient_b5fdr"]
interpolation_mode = 2
interpolation_color_space = 2
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ygvpb"]
gradient = SubResource("Gradient_b5fdr")
width = 1024
height = 1024
use_hdr = true
fill_from = Vector2(0, 1)
fill_to = Vector2(0.5, 0.5)

[node name="Main" type="Node"]
script = ExtResource("1_ygvpb")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="UI/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ygvpb")
expand_mode = 1
stretch_mode = 4

[node name="Content" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CopyrightMargin" type="MarginContainer" parent="UI/Content"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -55.0
grow_horizontal = 2
grow_vertical = 0

[node name="Copyright" type="Label" parent="UI/Content/CopyrightMargin"]
layout_mode = 2
size_flags_horizontal = 4
text = "Â© 2025 Andriy Byelikov Shvidak"

[node name="ContentLayout" type="HBoxContainer" parent="UI/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Empty" type="Control" parent="UI/Content/ContentLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainContentLayout" type="VBoxContainer" parent="UI/Content/ContentLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Control" parent="UI/Content/ContentLayout/MainContentLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="Layout" type="VBoxContainer" parent="UI/Content/ContentLayout/MainContentLayout/Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -100.5
offset_right = 171.0
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Title" type="Label" parent="UI/Content/ContentLayout/MainContentLayout/Title/Layout"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"TitleLabel"
text = "Lifted"

[node name="Subtitle" type="Label" parent="UI/Content/ContentLayout/MainContentLayout/Title/Layout"]
layout_mode = 2
size_flags_horizontal = 8
text = "Ludum Dare 57"

[node name="Menu" type="Control" parent="UI/Content/ContentLayout/MainContentLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="Layout" type="VBoxContainer" parent="UI/Content/ContentLayout/MainContentLayout/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -68.0
offset_right = 42.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NewGame" type="Button" parent="UI/Content/ContentLayout/MainContentLayout/Menu/Layout"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_type_variation = &"TitleMenuButton"
text = "New Game"
flat = true

[node name="Continue" type="Button" parent="UI/Content/ContentLayout/MainContentLayout/Menu/Layout"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"TitleMenuButton"
text = "Continue"
flat = true

[node name="Options" type="Button" parent="UI/Content/ContentLayout/MainContentLayout/Menu/Layout"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"TitleMenuButton"
text = "Options"
flat = true

[node name="Quit" type="Button" parent="UI/Content/ContentLayout/MainContentLayout/Menu/Layout"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"TitleMenuButton"
text = "Quit"
flat = true

[connection signal="pressed" from="UI/Content/ContentLayout/MainContentLayout/Menu/Layout/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="UI/Content/ContentLayout/MainContentLayout/Menu/Layout/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="UI/Content/ContentLayout/MainContentLayout/Menu/Layout/Quit" to="." method="_on_quit_pressed"]
